<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.drmmx.devmax.pokergame.game.PlayerCountActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose_amount_of_players"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/gray"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="143dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/red_poker_icon"
        android:onClick="sendPlayerCount"
        android:text="@string/continue_text"
        android:textColor="@color/gray"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerMoney" />

    <TextView
        android:id="@+id/playerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/start_player_count"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_poker_icon"
        android:onClick="increasePlayerMoney"
        android:text="@string/plus"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/playerMoney"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_poker_icon"
        android:onClick="increasePlayerCount"
        android:text="@string/plus"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/playerCount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_poker_icon"
        android:onClick="decreasePlayerMoney"
        android:text="@string/minus"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/playerMoney"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_poker_icon"
        android:onClick="decreasePlayerCount"
        android:text="@string/minus"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/playerCount"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/playerMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_money_count"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_player_starting_money"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/playerCount" />

</android.support.constraint.ConstraintLayout>
